--- a/src/components/Search/SearchResults/ResultsView/ResultsView.css
+++ b/src/components/Search/SearchResults/ResultsView/ResultsView.css
@@ -15,10 +15,12 @@
   flex-direction: column;
   justify-content: flex-start;
   align-content: center;
-  align-items: stretch;
+  align-items: center;
   width: 50vw;
   height: 90vh;
   overflow-y: auto;
+  padding-right: 3px;
+  padding-top: 3px;
 }
 ul {
   list-style: none;
