infowindow added to markers

--- a/src/components/Search/SearchResults/ResultsView/ResultsView.css
+++ b/src/components/Search/SearchResults/ResultsView/ResultsView.css
@@ -25,6 +25,12 @@
 ul {
   list-style: none;
 }
+.infowindow {
+    background: navajowhite;
+}
+.text-bold {
+    font-weight: bold;
+}
 
 @media screen and (max-width: 785px) {
   #gmap {
