--- a/src/components/Search/SearchResults/ResultsView/ResultsView.css
+++ b/src/components/Search/SearchResults/ResultsView/ResultsView.css
@@ -73,9 +73,17 @@ ul {
   /* border: 5px solid black; */
 
 }
+
+.filters {
+  border: 5px solid #000;
+  padding: 1em 0;
+  margin: 0 0 1em 0;
+}
+
 .infowindow {
     background: navajowhite;
 }
+
 .text-bold {
     font-weight: bold;
 }
