--- a/src/components/Search/SearchResults/UpdateSearch/UpdateSearch.css
+++ b/src/components/Search/SearchResults/UpdateSearch/UpdateSearch.css
@@ -1,11 +1,11 @@
 .updateSearchContainer{
-    width: 100vw;
-    background: navajowhite;
-    position: fixed;
-    height: 60px;
+    
+    width: 100%;
+    /* height: 60px; */
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+    overflow-x: auto;
 }
 
 .priceSelector{
