--- a/src/components/Nav/Header/Header.css
+++ b/src/components/Nav/Header/Header.css
@@ -13,6 +13,9 @@
   position: absolute;
   bottom: 1rem;
   padding-left: 1rem;
+  background-color: #000;
+  color: white;
+  padding: 0 1rem;
 }
 
 .header-title {
