--- a/src/components/Search/SearchResults/ResultsItem/ResultsItem.css
+++ b/src/components/Search/SearchResults/ResultsItem/ResultsItem.css
@@ -3,6 +3,7 @@
   -webkit-box-shadow: inset 0px 134px 114px -70px rgba(0,0,0,0.48);
   -moz-box-shadow: inset 0px 134px 114px -70px rgba(0,0,0,0.48);
   box-shadow: inset 0px 134px 114px -70px rgba(0,0,0,0.48);
+  border: 1px solid #ebebeb;
 }
 
 .card-body {
@@ -73,3 +74,9 @@
   width: 100%;
   max-height: 100%;
 }
+
+/* @media (max-width: 800px) {
+  .sized {
+      height: 100px;
+  }
+} */
