--- a/src/App.css
+++ b/src/App.css
@@ -27,4 +27,10 @@
   to { transform: rotate(360deg); }
 }
 
-
+@font-face {
+  font-family: 'northregular';
+  src: url('north-webfont.woff2') format('woff2'),
+       url('north-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
