--- a/src/components/Home/Popular/PopularCard/PopularCard.css
+++ b/src/components/Home/Popular/PopularCard/PopularCard.css
@@ -1,16 +1,14 @@
 .card-price{
-    background-color:#fdd23c;
     color:white;
     text-align: center;
     position: absolute;
     right: 0.5rem;
     top: 0.5rem;
-
-    width:6.75rem;
+    width:7.5rem;
     padding: 0.5rem;
     border-radius: 5px;  
 }
 .card{
-  border-radius: 5px; 
-  /* margin:0.25rem !important; */
+  border-radius: 5px;
+  margin-bottom: 2rem !important;
 }
