--- a/src/components/Nav/Header/Header.css
+++ b/src/components/Nav/Header/Header.css
@@ -1,17 +1,24 @@
-.jumbotron {
+.jumbotron:before {
   background-image: url('https://images.unsplash.com/photo-1468296320602-73cc55315f25?auto=format&fit=crop&w=1212&q=80');
   background-color: #fff;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: bottom center;
+  background-position: bottom -50px center;
+  
+}
+
+.jumbotron {
   height: 80vh;
   padding-top: 1rem;
   position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  clip-path: polygon(0 0, 100% 0, 100% 93%, 0% 100%);
+  
+  
 }
 
 .location {
   position: absolute;
-  bottom: 1rem;
+  bottom: 3rem;
   padding-left: 1rem;
   background-color: #000;
   color: white;
@@ -25,15 +32,15 @@
 
 .header-title .display-3 {
   font-family: "northregular";
-  font-size: 4rem;
+  font-size: 6rem;
   color: white;
-  text-shadow: -1px -px black;
-       -moz-text-fill-color: #fff;
+  text-shadow: -4px -6px black;
+  /* -moz-text-fill-color: #fff;
   -webkit-text-fill-color: #fff;
-     -moz-text-stroke-color: #000;
+  -moz-text-stroke-color: #000;
   -webkit-text-stroke-color: #000;
-     -moz-text-stroke-width: 1px;  
-  -webkit-text-stroke-width: 1px;
+  -moz-text-stroke-width: 1px;  
+  -webkit-text-stroke-width: 1px; */
 }
 
 .header-title .w-80 {
