--- a/src/components/Search/SearchResults/UpdateSearch/UpdateSearch.css
+++ b/src/components/Search/SearchResults/UpdateSearch/UpdateSearch.css
@@ -1,11 +1,15 @@
 .updateSearchContainer{
-    
+    font-family: 'Lato', sans-serif;
     width: 100%;
     /* height: 60px; */
     display:flex;
     flex-direction: row;
     justify-content: space-between;
     overflow-x: auto;
+}
+
+.updateSearchContainer select {
+    text-transform: uppercase;
 }
 
 .priceSelector{
@@ -39,4 +43,49 @@
     height: 25px; /* Slider handle height */
     background: #4CAF50; /* Green background */
     cursor: pointer; /* Cursor on hover */
+}
+
+
+
+/* rc-slider styles */
+
+.rc-slider {
+    padding: 3px 0;
+}
+
+.rc-slider-rail {
+    height: 10px;
+}
+
+.rc-slider-track {
+    height: 10px;
+}
+
+.rc-slider-handle {
+    margin-top: -5px;
+    width: 20px;
+    height: 20px;
+}
+
+.rc-slider-tooltip {
+    font-size: 35px;
+    color: red;
+}
+
+.rc-slider-dot {
+    background-color: black;
+    height: 16px;
+    width: 6px;
+    border-radius: 0;
+    border: 0px;
+    bottom: -9px;
+}
+
+.foo {
+    color: green;
+    font-size: 24px;
+}
+
+.budget-slider {
+    padding: 0 0;
 }
