--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,20 @@
+* {
+  font-family: 'Dosis', sans-serif;
+  /* font-family: 'Lato', sans-serif;   */
+  font-size: 1rem;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
 
-.App-title {
-  font-size: 1.5em;
-}
+/* Fonts */
 
-.App-intro {
-  font-size: large;
-}
+@import url('https://fonts.googleapis.com/css?family=Dosis');
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
 
 @font-face {
   font-family: 'northregular';
