style: change fonts

--- a/src/components/Search/SearchResults/UpdateSearch/UpdateSearch.css
+++ b/src/components/Search/SearchResults/UpdateSearch/UpdateSearch.css
@@ -89,3 +89,8 @@
 .budget-slider {
     padding: 0 0;
 }
+
+.budget-slider .row {
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #ebebeb;
+}
