--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 * {
   font-family: 'Dosis', sans-serif;
   /* font-family: 'Lato', sans-serif;   */
-  font-size: 1rem;
+  /* font-size: 1rem; */
 }
 
 .App {
