--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -21,6 +21,7 @@ main {
 }
 
 .flight-info {
+  font-family: 'Lato', sans-serif;
   background-color: #000;
   padding: 0.5rem 2rem;
 }
@@ -34,12 +35,15 @@ main {
 
 .flight-details {
   position: relative;
-  top: -7rem;  
+  top: -7rem;
 }
 
-.flight-details {
-  position: relative;
-  top: -7rem;
+.flight-details .card-header {
+  font-family: 'Lato', sans-serif;
+}
+
+.flight-details .card-body {
+  font-family: 'Lato', sans-serif;
 }
 
 .flight-details .fa {
